--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,20 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+  
+    
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        
+        
+	 <dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-starter-thymeleaf</artifactId>
+	</dependency>
+	
+
   </dependencies>
   
    <build>
@@ -38,7 +48,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>springloaded</artifactId>
+            <version>1.2.0.RELEASE</version>
+        </dependency>
+    </dependencies>
             </plugin>
+            
+            
+            
         </plugins>
     </build>
   
