--- a/pom.xml
+++ b/pom.xml
@@ -28,19 +28,51 @@
       <scope>test</scope>
     </dependency>
   
+        <dependency> 
+      <groupId>com.alibaba</groupId>  
+      <artifactId>fastjson</artifactId>  
+      <version>1.2.15</version> 
+    </dependency>  
+    
     
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         
-        
+            <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-data-jpa</artifactId>
+	</dependency>
+	
 	 <dependency>
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-thymeleaf</artifactId>
 	</dependency>
 	
-
+    <dependency> 
+      <groupId>mysql</groupId>  
+      <artifactId>mysql-connector-java</artifactId>  
+      <version>5.1.39</version> 
+    </dependency>  
+    
+    <dependency> 
+      <groupId>aspectj</groupId>  
+      <artifactId>aspectjweaver</artifactId>  
+      <version>1.5.3</version> 
+    </dependency>  
+    
+    <dependency> 
+      <groupId>javax.persistence</groupId>  
+      <artifactId>persistence-api</artifactId>  
+      <version>1.0</version> 
+    </dependency> 
+    
+            
+	 <dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-starter-thymeleaf</artifactId>
+	</dependency>
   </dependencies>
   
    <build>
