--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,33 @@
 server.port=9091
+
+
+########################################################
+###datasource
+########################################################
+spring.datasource.url = jdbc:mysql://172.16.101.211:30001/m2ctest
+spring.datasource.username = sa_test
+spring.datasource.password = ymtcs@2016
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.max-active=20
+spring.datasource.max-idle=8
+spring.datasource.min-idle=8
+spring.datasource.initial-size=10
+
+########################################################
+### Java Persistence Api
+########################################################
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
+#[org.hibernate.cfg.ImprovedNamingStrategy  #org.hibernate.cfg.DefaultNamingStrategy]
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+# stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
+
+
+
+
